--- a/react-client/src/s2s.css
+++ b/react-client/src/s2s.css
@@ -6,6 +6,17 @@
     display: block;
 }
 
+.s2s .top .action .chathistory {
+    display: inline-block;
+    margin-left: 20px;
+    vertical-align: top;
+}
+
+.s2s .top .action .chathistory .desc {
+    display: block;
+    font-size: small;
+    color: gray;
+}
 .s2s .top .setting {
     position: absolute;
     top: 20px;
@@ -124,16 +135,16 @@
     cursor: pointer;
     font-weight: bold;
     border-radius: 10px;
-    width: 70%;
-    margin-left: 5px;
-    margin-right: 10%;
-    margin-bottom: 5px;
+    width: 60%;
+    margin: 5px;
+    font-weight: bold;
+    float: right;
 }
 .s2s .events .event-int {
     position: relative;
     display: inline-block;
     padding: 10px;
-    background-color: #878b05; 
+    background-color: #cc7b01; 
     color: white;
     cursor: pointer;
     font-weight: bold;
